Fixed horizontal scrolling issue

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,7 +9,7 @@ html {
 
 body {
     padding-top: 48px;
-    overflow-y: hidden
+    overflow-x: hidden
 }
 
 .main-content {
